tests/expectations/compiler/dynamic_dispatch/dynamic_storage_vector_len_with_args_fail.out
Error [ETYC0372006]: Call expected `0` args, but got `1`
    --> compiler-test:13:18
     |
  13 |     let n: u32 = Logs@(target)::entries.len(0u32);
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
